--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -16,7 +16,7 @@
         <td>{{rental.carName}}</td>
         <td>{{rental.brandName}}</td>
         <td>{{rental.userName}}</td>
-        <td>{{rental.CompanyName}}</td>
+        <td>{{rental.companyName}}</td>
         <td>{{rental.rentDate}}</td>
         <td>{{rental.returnDate}}</td>
     </tr>
