--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="brandLoaded==false" class="spinner-border" role="status">
+<!-- <div *ngIf="brandLoaded==false" class="spinner-border" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
 <table *ngIf="brandLoaded!=false" class="table">
@@ -12,4 +12,16 @@
         <td>{{brand.brandId}}</td>
         <td>{{brand.brandName}}</td>
     </tr>
-</table>
+</table> -->
+<br/>
+<ul class="list-group">
+    <li class="list-group-item list-group-item-action list-group-item-success"><b>Marka Listesi</b></li>
+    <li (click)="setCurrentBrand(brand)"
+    routerLink="/cars/brand/{{brand.brandId}}"
+    *ngFor="let brand of brands"
+    [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+</ul>
+
+<h5 *ngIf="currentBrand">{{currentBrand.brandName}} seçtiniz</h5>
+
+<br/>
