--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,4 +1,33 @@
+<h4>ARAÇ LİSTESİ</h4>
 <div *ngIf="carLoaded==false" class="spinner-border" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+<div class="row" *ngIf="carLoaded==true">
+  <div *ngFor="let car of cars" class="card" style="width:300px; margin:5px;">
+    <img src="{{imageBasePath}}{{car.imagePath}}" class="card-img-top" alt="{{car.description}} Image" width="auto" height="auto" style="margin-top: 5px; border-radius: 10px;">
+    <!-- <img src="{{imageBasePath}}//uploads//1ff16c15-f5d0-444b-84e7-1de0f660209a.jpg" class="card-img-top" alt="{{car.description}} Image" width="auto" height="auto"> -->
+    <div  class="card-body">
+      <h5 class="card-title">{{car.description}}</h5>
+    </div >
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Araç: {{car.brandName}} {{car.carName}}</li>
+      <li class="list-group-item">Renk: {{car.colorName}}</li>
+      <li class="list-group-item">Model Yılı: {{car.modelYear}}</li>
+      <li class="list-group-item">Fiyat: {{car.dailyPrice | currency: "TRY":"TL ":"4.2-2"  }}</li>
+    </ul>
+    <div class="card-footer" style="margin-bottom: 5px;">
+      <section  style="float: left">
+        <button routerLink="/car/details/{{car.id}}" style="width: 100px;" type="button" class="btn btn-outline-success">Detaylar</button>
+      </section>
+      <section style="float: right">
+        <button type="button" style="width: 100px;" class="btn btn-outline-success">Kirala</button>
+      </section>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div *ngIf="carLoaded==false" class="spinner-border" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
 <table *ngIf="carLoaded!=false" class="table">
@@ -21,5 +50,7 @@
         <td>{{car.modelYear}}</td>
         <td>{{car.dailyPrice}}</td>
         <td>{{car.description}}</td>
+     <td><img src="{{car.imagePath}}" alt="{{car.carName}}" width="200" height="133"></td> 
     </tr>
-</table>
+</table> -->
+
