--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,12 @@
 <div class="container">
-    <app-customer></app-customer>
-    <app-rental></app-rental>
+    <div class="row">
+        <div class="col-md-3">
+            <app-brand></app-brand>
+            <app-color></app-color>
+            <br/>
+        </div>
+        <div class="col-md-9">
+            <br/>
+            <router-outlet></router-outlet>
+      </div>
 </div>
