--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -12,7 +12,17 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
-          <app-rent-the-car></app-rent-the-car>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Ekle-Sil-Güncelle
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="/carlist">Araç İşlemleri</a></li>
+              <li><a class="dropdown-item" href="/brandlist">Marka İşlemleri</a></li>
+              <li><a class="dropdown-item" href="/colorlist">Renk İşlemleri</a></li>
+            </ul>
+          </li>
+          <!-- <app-rent-the-car></app-rent-the-car> -->
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
