--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="container">
   <app-navi></app-navi>
-  <!-- <app-car></app-car>
-  <app-brand></app-brand>
-  <app-color></app-color> -->
   <app-main></app-main>
 </div>
+<app-footer></app-footer>
